@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: kahua-package.scm,v 1.2 2006/07/28 13:09:43 bizenn Exp $
+;; $Id: kahua-package.scm,v 1.3 2006/08/13 07:18:48 cut-sea Exp $
 (use srfi-13)
 
 (use file.util)
@@ -36,6 +36,7 @@
 	  (cons #`",|skel|/proj/default.kahua" #`",|proj|/default.kahua")
 	  (cons #`",|skel|/proj/debug-support.kahua" #`",|proj|/debug-support.kahua")
 	  (cons #`",|skel|/proj/page.kahua" #`",|proj|/page.kahua")
+	  (cons #`",|skel|/proj/parts-collection.kahua" #`",|proj|/parts-collection.kahua")
 	  (cons #`",|skel|/proj/pcont-page.kahua" #`",|proj|/pcont-page.kahua")
 	  (cons #`",|skel|/proj/session.kahua" #`",|proj|/session.kahua")
 	  (cons #`",|skel|/proj/utility.kahua" #`",|proj|/utility.kahua")
